remove tmux bg so it uses terminal bg

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -12,7 +12,7 @@ set -g @catppuccin_status_background "none"
 set -g @catppuccin_window_status_style "none"
 set -g @catppuccin_pane_status_enabled "off"
 set -g @catppuccin_pane_border_status "off"
-
+set -g @thm_bg "default"
 # Configure Online
 set -g @online_icon "ok"
 set -g @offline_icon "nok"
@@ -64,4 +64,5 @@ set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
 set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
 
 set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
+set -g window-status-current-style "bg=#{@thm_peach},fg=black,bold"
+
