--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,68 +1,141 @@
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g mouse on
-set -g @plugin 'tmux-plugins/tmux-online-status'
-set -g @plugin 'tmux-plugins/tmux-battery'
+# Color key:
+#   #1d1f21 Background
+#   #282a2e Current Line
+#   #373b41 Selection
+#   #c5c8c6 Foreground
+#   #969896 Comment
+#   #cc6666 Red
+#   #de935f Orange
+#   #f0c674 Yellow
+#   #b5bd68 Green
+#   #8abeb7 Aqua
+#   #81a2be Blue
+#   #b294bb Purple
 
-# Configure Catppuccin
-set -g @catppuccin_flavor "macchiato"
-set -g @catppuccin_status_background "none"
-set -g @catppuccin_window_status_style "none"
-set -g @catppuccin_pane_status_enabled "off"
-set -g @catppuccin_pane_border_status "off"
-set -g @thm_bg "default"
-# Configure Online
-set -g @online_icon "ok"
-set -g @offline_icon "nok"
 
-# status left look and feel
-set -g status-left-length 100
-set -g status-left ""
-set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
-
-# status right look and feel
+## set status bar
+set -g status-style bg=default
+# # setw -g window-status-current-style bg="#282a2e"
+# setw -g window-status-current-style fg="#81a2be"
+#
+# ## highlight active window
+# setw -g window-style 'bg=#282a2e'
+# setw -g window-active-style 'bg=#1d1f21'
+# setw -g pane-active-border-style ''
+#
+# ## highlight activity in status bar
+# setw -g window-status-activity-style fg="#8abeb7"
+# setw -g window-status-activity-style bg="#1d1f21"
+#
+# ## pane border and colors
+# set -g pane-active-border-style bg=default
+# set -g pane-active-border-style fg="#373b41"
+# set -g pane-border-style bg=default
+# set -g pane-border-style fg="#373b41"
+#
+# set -g clock-mode-colour "#81a2be"
+# set -g clock-mode-style 24
+#
+# set -g message-style bg="#8abeb7"
+# set -g message-style fg="#000000"
+#
+set -g message-command-style bg="#8abeb7"
+set -g message-command-style fg="#000000"
+#
+# # message bar or "prompt"
+set -g message-style bg="#2d2d2d"
+set -g message-style fg="#cc99cc"
+#
+# set -g mode-style bg="#1d1f21"
+# set -g mode-style fg="#de935f"
+#
+# # right side of status bar holds "[host name] (date time)"
 set -g status-right-length 100
-set -g status-right ""
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] cpu #{cpu_percentage} "
+# set -g status-right-style fg=black
+set -g status-right-style bold
+set -g status-right '%H:%M | %y.%m.%d '
+#
+# # make background window look like white tab
+# set-window-option -g window-status-style bg=default
+# set-window-option -g window-status-style fg=white
+# set-window-option -g window-status-style none
+# set-window-option -g window-status-format '#[fg=#6699cc,bg=colour235] #I #[fg=#999999,bg=#2d2d2d] #W #[default]'
+#
+# # make foreground window look like bold yellow foreground tab
+# set-window-option -g window-status-current-style none
+# set-window-option -g window-status-current-format '#[fg=#f99157,bg=#2d2d2d] #I #[fg=#cccccc,bg=#393939] #W #[default]'
+#
+# # active terminal yellow border, non-active white
+# set -g pane-border-style bg=default
+# set -g pane-border-style fg="#999999"
+# set -g pane-active-border-style fg="#f99157"
 
-# bootstrap tpm
-if "test ! -d ~/.tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
-# Configure Tmux
-set -g status-position top
-set -g status-style "bg=#{@thm_bg}"
-set -g status-justify "absolute-centre"
-
-# pane border look and feel
-setw -g pane-border-status top
-setw -g pane-border-format ""
-setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
-setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
-setw -g pane-border-lines single
-
-# window look and feel
-set -wg automatic-rename on
-set -g automatic-rename-format "Window"
-
-set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
-set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
-set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
-set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
-set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
-
-set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-set -g window-status-current-style "bg=#{@thm_peach},fg=black,bold"
-
+# begin catpuccin
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
+# set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g mouse on
+# set -g @plugin 'tmux-plugins/tmux-online-status'
+# set -g @plugin 'tmux-plugins/tmux-battery'
+#
+# # Configure Catppuccin
+# set -g @catppuccin_flavor "macchiato"
+# set -g @catppuccin_status_background "none"
+# set -g @catppuccin_window_status_style "none"
+# set -g @catppuccin_pane_status_enabled "off"
+# set -g @catppuccin_pane_border_status "off"
+# set -g @thm_bg "default"
+# # Configure Online
+# set -g @online_icon "ok"
+# set -g @offline_icon "nok"
+#
+# # status left look and feel
+# set -g status-left-length 100
+# set -g status-left ""
+# set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+#
+# # status right look and feel
+# set -g status-right-length 100
+# set -g status-right ""
+# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] cpu #{cpu_percentage} "
+#
+# # bootstrap tpm
+# if "test ! -d ~/.tmux/plugins/tpm" \
+#    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+#
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run '~/.tmux/plugins/tpm/tpm'
+#
+# # Configure Tmux
+# set -g status-position top
+# set -g status-style "bg=#{@thm_bg}"
+# set -g status-justify "absolute-centre"
+#
+# # pane border look and feel
+# setw -g pane-border-status top
+# setw -g pane-border-format ""
+# setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+# setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+# setw -g pane-border-lines single
+#
+# # window look and feel
+# set -wg automatic-rename on
+# set -g automatic-rename-format "Window"
+#
+# set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+# set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+# set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
+# set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+# set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+# set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+#
+# set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+# set -g window-status-current-style "bg=#{@thm_peach},fg=black,bold"
+#
